@@ -1,5 +1,15 @@
 2006-07-13  Roger Leigh  <rleigh@debian.org>
 
+	* sbuild/sbuild-chroot.h: API documentation corrections.
+
+	* sbuild/sbuild-chroot.cc
+	(set_persona): New overloaded function to set the personality by
+	name.
+	(set_keyfile): Set the personality using
+	keyfile::get_object_value.
+
+2006-07-13  Roger Leigh  <rleigh@debian.org>
+
 	* All sources use error<> in place of custom_error_base<>, and
 	std::runtime_error in place of runtime_error.
 
